--- a/src/App.css
+++ b/src/App.css
@@ -10,15 +10,10 @@
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-#Logout{
-  display: none;
 }
 
 .App-header {
@@ -48,6 +43,12 @@
 *{
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+.hidden {
+  display: none;
+}
+
+
 /*NAVBAR*/
 #navbar{
   position: fixed;
